<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/linear_seek"
    android:layout_height="wrap_content"
    android:background="@color/actionBarColor"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"

        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/me"
            android:gravity="center"
            android:textColor="@color/musicStyle"
            android:textSize="22sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/listen"
            android:textSize="20sp"
            android:textColor="@color/white_blue"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/look"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white_blue"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:background="@drawable/seek_sp"
        android:text="@string/seek"/>


</LinearLayout>